fdo#74111 3D Rotation is wrong after Round trip for pie chart

3D Rotation is lost after Round trip for pie chart.
XML Difference:

Original:
<c:rotX val="40"/>
<c:rotY val="30"/>

Round Trip:
<c:rotX val="310"/>
<c:rotY val="0"/>

Conflicts:
	chart2/qa/extras/chart2export.cxx

Change-Id: I60132fef071e0573b17c35f509f3a74bd4ffcc66