chart2/qa/extras/chart2export.cxx
@@ -51,6 +51,7 @@ public:
     void testSeriesIdxOrder();
     void testErrorBarDataRangeODS();
     void testChartCrash();
+    void testPieChartRotation();
 
     CPPUNIT_TEST_SUITE(Chart2ExportTest);
     CPPUNIT_TEST(test);
@@ -74,6 +75,7 @@ public:
     CPPUNIT_TEST(testSeriesIdxOrder);
     CPPUNIT_TEST(testErrorBarDataRangeODS);
     CPPUNIT_TEST(testChartCrash);
+    CPPUNIT_TEST(testPieChartRotation);
     CPPUNIT_TEST_SUITE_END();
 
 protected:
@@ -660,6 +662,15 @@ void Chart2ExportTest::testChartCrash()
     load("/chart2/qa/extras/data/docx/", "FDO75975.docx");
     xmlDocPtr pXmlDoc = parseExport("word/charts/chart", "Office Open XML Text");
     CPPUNIT_ASSERT(pXmlDoc);
+}
+
+void Chart2ExportTest::testPieChartRotation()
+{
+    load ("/chart2/qa/extras/data/docx/", "pieChartRotation.docx");
+    xmlDocPtr pXmlDoc = parseExport("word/charts/chart","Office Open XML Text");
+    CPPUNIT_ASSERT(pXmlDoc);
+    assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:view3D/c:rotX", "val", "40");
+    assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:view3D/c:rotY", "val", "30");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ExportTest);
